--- a/infra/nginx/dev.conf
+++ b/infra/nginx/dev.conf
@@ -1,31 +1,30 @@
 server {
   listen 8080;
 
-  # удобный корень (браузер)
-  location = / {
-    return 302 /health;
-  }
-
-  # Gateway health
   location = /health {
-    add_header Content-Type application/json;
     return 200 '{"status":"ok","service":"gateway"}';
+    add_header Content-Type application/json;
   }
 
-  # Core via /api/*
-  location /api/ {
+  # CORE: /api/* -> core:8000/*
+  # IMPORTANT: trailing slash strips /api/ prefix automatically
+  location ^~ /api/ {
+    proxy_http_version 1.1;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_pass http://core:8000/;
-    proxy_set_header Host $host;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Request-Id $request_id;
   }
 
-  # Content via /content/*
-  location /content/ {
-    proxy_pass http://content:8001/;
+  # CONTENT: /content/* -> content:8000/*
+  location ^~ /content/ {
+    proxy_http_version 1.1;
     proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Request-Id $request_id;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_pass http://content:8000/;
   }
 }
 # END_FILE
