--- a/services/core/requirements.txt
+++ b/services/core/requirements.txt
@@ -1,2 +1,10 @@
 fastapi==0.115.0
 uvicorn[standard]==0.30.6
+
+# DB (async)
+SQLAlchemy==2.0.36
+asyncpg==0.30.0
+
+# Auth
+PyJWT==2.10.1
+passlib[bcrypt]==1.7.4
