--- a/infra/nginx/dev.conf
+++ b/infra/nginx/dev.conf
@@ -1,6 +1,19 @@
 server {
   listen 8080;
 
+    
+  absolute_redirect off;
+  port_in_redirect off;
+    location = / {
+      proxy_http_version 1.1;
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+
+      proxy_pass http://core:8000/health;
+    }
+
   location = /health {
     return 200 '{"status":"ok","service":"gateway"}';
     add_header Content-Type application/json;
