--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -1,3 +1,10 @@
+      - name: Debug logs on failure
+        if: failure()
+        run: |
+          docker compose ps
+          docker compose logs --no-color --tail=200 gateway
+          docker compose logs --no-color --tail=200 core
+          docker compose logs --no-color --tail=200 content
 name: smoke
 
 on:
