--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -52,8 +52,9 @@ jobs:
           exit 1
 
       - name: Run smoke script
-        run: |
-          set -euo pipefail
+        - name: Smoke
+          run: |
+            bash ./scripts/smoke_gateway.sh
 
       - name: Collect logs (on failure)
         if: failure()
